--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+/*noinspection CssUnresolvedCustomProperty*/
 :root {
   color-scheme: light;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -7,14 +8,15 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #213547;
-  background-color: #ffffff;
+  --body-color: var(--p-text-color);
+  --body-bg: var(--p-surface-0);
 }
 
-.app-dark {
+/*noinspection CssUnresolvedCustomProperty*/
+:root[class="app-dark"] {
   color-scheme: dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --body-color: var(--p-text-color);
+  --body-bg: var(--p-surface-950);
 }
 
 body {
@@ -23,12 +25,12 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: inherit;
-  color: inherit;
+  color: var(--body-color);
+  background-color: var(--body-bg);
   transition: background-color 0.3s, color 0.3s;
 }
 
-a {
+/*a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -36,11 +38,12 @@ a {
 
 a:hover {
   color: #535bf2;
-}
+}*/
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: inherit;
 }
 
 .card {
