--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@
   -moz-osx-font-smoothing: grayscale;
   --body-color: var(--p-text-color);
   --body-bg: var(--p-surface-50);
+  --surface-100: var(--p-surface-100);
 }
 
 /*noinspection CssUnresolvedCustomProperty*/
@@ -17,12 +18,11 @@
   color-scheme: dark;
   --body-color: var(--p-text-color);
   --body-bg: var(--p-surface-900);
+  --surface-100: var(--p-surface-500);
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
   color: var(--body-color);
@@ -51,8 +51,9 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  margin: 0;
+  padding: 1rem;
+  text-align: left;
+  box-sizing: border-box;
 }
